--- a/cfg/environment.yml
+++ b/cfg/environment.yml
@@ -7,7 +7,6 @@ dependencies:
   - attrs=20.3.0=pyhd3eb1b0_0
   - blas=1.0=openblas
   - boto3=1.17.41=pyhd3eb1b0_0
-  - botocore=1.20.43=pyhd3eb1b0_1
   - brotlipy=0.7.0=py39h9ed2024_1003
   - ca-certificates=2021.1.19=hecd8cb5_1
   - cachetools=4.2.1=pyhd3eb1b0_0
@@ -94,6 +93,11 @@ dependencies:
   - zlib=1.2.11=h1de35cc_3
   - zstd=1.4.9=h322a384_0
   - pip:
+    - awscli==1.19.44
+    - botocore==1.20.44
+    - colorama==0.4.3
+    - docutils==0.15.2
     - fuzzywuzzy==0.18.0
+    - pyyaml==5.4.1
     - yellowbrick==1.3.post1
 prefix: /opt/anaconda3/envs/lyricsenv
