--- a/cfg/environment.yml
+++ b/cfg/environment.yml
@@ -3,8 +3,10 @@ channels:
   - defaults
 dependencies:
   - aiohttp=3.7.4=py39h9ed2024_1
+  - appnope=0.1.2=py39hecd8cb5_1001
   - async-timeout=3.0.1=py39hecd8cb5_0
   - attrs=20.3.0=pyhd3eb1b0_0
+  - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=openblas
   - boto3=1.17.41=pyhd3eb1b0_0
   - brotlipy=0.7.0=py39h9ed2024_1003
@@ -16,6 +18,7 @@ dependencies:
   - click=7.1.2=pyhd3eb1b0_0
   - cryptography=3.4.7=py39h2fd3fbb_0
   - cycler=0.10.0=py39hecd8cb5_0
+  - decorator=5.0.3=pyhd3eb1b0_0
   - freetype=2.10.4=ha233b18_0
   - gensim=3.8.3=py39h23ab428_2
   - google-api-core=1.25.1=pyhd3eb1b0_0
@@ -26,6 +29,9 @@ dependencies:
   - google-resumable-media=1.2.0=pyhd3eb1b0_1
   - googleapis-common-protos=1.52.0=py39hecd8cb5_0
   - idna=2.10=pyhd3eb1b0_0
+  - ipython=7.22.0=py39h01d92e1_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - jedi=0.17.2=py39hecd8cb5_1
   - jmespath=0.10.0=py_0
   - joblib=1.0.1=pyhd3eb1b0_0
   - jpeg=9b=he5867d9_2
@@ -54,13 +60,19 @@ dependencies:
   - olefile=0.46=py_0
   - openssl=1.1.1k=h9ed2024_0
   - pandas=1.2.3=py39hb2f4e1b_0
+  - parso=0.7.0=py_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=8.2.0=py39h5270095_0
   - pip=21.0.1=py39hecd8cb5_0
+  - prompt-toolkit=3.0.17=pyh06a4308_0
   - protobuf=3.14.0=py39h23ab428_1
   - psycopg2=2.8.6=py39hbcfaee0_1
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.8=py_0
   - pycparser=2.20=py_2
+  - pygments=2.8.1=pyhd3eb1b0_0
   - pyopenssl=20.0.1=pyhd3eb1b0_1
   - pyparsing=2.4.7=pyhd3eb1b0_0
   - pysocks=1.7.1=py39hecd8cb5_0
@@ -83,10 +95,12 @@ dependencies:
   - tk=8.6.10=hb0a8c7a_0
   - tornado=6.1=py39h9ed2024_0
   - tqdm=4.59.0=pyhd3eb1b0_1
+  - traitlets=5.0.5=pyhd3eb1b0_0
   - typing-extensions=3.7.4.3=hd3eb1b0_0
   - typing_extensions=3.7.4.3=pyh06a4308_0
   - tzdata=2020f=h52ac0ba_0
   - urllib3=1.26.4=pyhd3eb1b0_0
+  - wcwidth=0.2.5=py_0
   - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h1de35cc_0
   - yarl=1.6.3=py39h9ed2024_0
