--- a/cfg/environment.yml
+++ b/cfg/environment.yml
@@ -2,7 +2,9 @@ name: lyricsenv
 channels:
   - defaults
 dependencies:
+  - aiobotocore=1.2.2=pyhd3eb1b0_0
   - aiohttp=3.7.4=py39h9ed2024_1
+  - aioitertools=0.7.1=pyhd3eb1b0_0
   - appnope=0.1.2=py39hecd8cb5_1001
   - async-timeout=3.0.1=py39hecd8cb5_0
   - attrs=20.3.0=pyhd3eb1b0_0
@@ -20,6 +22,7 @@ dependencies:
   - cycler=0.10.0=py39hecd8cb5_0
   - decorator=5.0.3=pyhd3eb1b0_0
   - freetype=2.10.4=ha233b18_0
+  - fsspec=0.8.7=pyhd3eb1b0_0
   - gensim=3.8.3=py39h23ab428_2
   - google-api-core=1.25.1=pyhd3eb1b0_0
   - google-auth=1.28.0=pyhd3eb1b0_0
@@ -83,6 +86,7 @@ dependencies:
   - regex=2021.3.17=py39h9ed2024_0
   - requests=2.25.1=pyhd3eb1b0_0
   - rsa=4.7.2=pyhd3eb1b0_1
+  - s3fs=0.5.2=pyhd3eb1b0_0
   - s3transfer=0.3.6=pyhd3eb1b0_0
   - scikit-learn=0.24.1=py39hb2f4e1b_0
   - scipy=1.6.2=py39h4420a3a_0
@@ -102,6 +106,7 @@ dependencies:
   - urllib3=1.26.4=pyhd3eb1b0_0
   - wcwidth=0.2.5=py_0
   - wheel=0.36.2=pyhd3eb1b0_0
+  - wrapt=1.12.1=py39h9ed2024_1
   - xz=5.2.5=h1de35cc_0
   - yarl=1.6.3=py39h9ed2024_0
   - zlib=1.2.11=h1de35cc_3
@@ -112,6 +117,12 @@ dependencies:
     - colorama==0.4.3
     - docutils==0.15.2
     - fuzzywuzzy==0.18.0
+    - greenlet==1.0.0
+    - ipython-sql==0.4.0
+    - prettytable==0.7.2
+    - python-dotenv==0.17.0
     - pyyaml==5.4.1
+    - sqlalchemy==1.4.5
+    - sqlparse==0.4.1
     - yellowbrick==1.3.post1
 prefix: /opt/anaconda3/envs/lyricsenv
