--- a/cfg/environment.yml
+++ b/cfg/environment.yml
@@ -1,26 +1,32 @@
 name: lyricsenv
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - aiobotocore=1.2.2=pyhd3eb1b0_0
   - aiohttp=3.7.4=py39h9ed2024_1
   - aioitertools=0.7.1=pyhd3eb1b0_0
   - appnope=0.1.2=py39hecd8cb5_1001
+  - argon2-cffi=20.1.0=py39hcbf5805_2
   - async-timeout=3.0.1=py39hecd8cb5_0
+  - async_generator=1.10=py_0
   - attrs=20.3.0=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=openblas
+  - bleach=3.3.0=pyh44b312d_0
   - boto3=1.17.41=pyhd3eb1b0_0
   - brotlipy=0.7.0=py39h9ed2024_1003
-  - ca-certificates=2021.1.19=hecd8cb5_1
+  - ca-certificates=2020.12.5=h033912b_0
   - cachetools=4.2.1=pyhd3eb1b0_0
-  - certifi=2020.12.5=py39hecd8cb5_0
+  - certifi=2020.12.5=py39h6e9494a_1
   - cffi=1.14.5=py39h2125817_0
   - chardet=3.0.4=py39hecd8cb5_1003
   - click=7.1.2=pyhd3eb1b0_0
   - cryptography=3.4.7=py39h2fd3fbb_0
   - cycler=0.10.0=py39hecd8cb5_0
   - decorator=5.0.3=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
   - freetype=2.10.4=ha233b18_0
   - fsspec=0.8.7=pyhd3eb1b0_0
   - gensim=3.8.3=py39h23ab428_2
@@ -32,12 +38,19 @@ dependencies:
   - google-resumable-media=1.2.0=pyhd3eb1b0_1
   - googleapis-common-protos=1.52.0=py39hecd8cb5_0
   - idna=2.10=pyhd3eb1b0_0
+  - importlib-metadata=3.10.0=py39h6e9494a_0
+  - ipykernel=5.5.3=py39h71a6800_0
   - ipython=7.22.0=py39h01d92e1_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - jedi=0.17.2=py39hecd8cb5_1
+  - jinja2=2.11.3=pyh44b312d_0
   - jmespath=0.10.0=py_0
   - joblib=1.0.1=pyhd3eb1b0_0
   - jpeg=9b=he5867d9_2
+  - jsonschema=3.2.0=pyhd8ed1ab_3
+  - jupyter_client=6.1.13=pyhd8ed1ab_0
+  - jupyter_core=4.7.1=py39h6e9494a_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
   - kiwisolver=1.3.1=py39h23ab428_0
   - krb5=1.17.1=hddcf347_0
   - lcms2=2.11=h92f6f08_0
@@ -50,24 +63,36 @@ dependencies:
   - libpng=1.6.37=ha441bb4_0
   - libpq=12.2=h051b688_0
   - libprotobuf=3.14.0=h2842e9f_0
+  - libsodium=1.0.18=hbcb3906_1
   - libtiff=4.1.0=hcb84e12_1
   - llvm-openmp=10.0.0=h28b9765_0
   - lz4-c=1.9.3=h23ab428_0
+  - markupsafe=1.1.1=py39hcbf5805_3
   - matplotlib=3.3.4=py39hecd8cb5_0
   - matplotlib-base=3.3.4=py39h8b3ea08_0
+  - mistune=0.8.4=py39hcbf5805_1003
   - multidict=5.1.0=py39h9ed2024_2
+  - nbclient=0.5.3=pyhd8ed1ab_0
+  - nbconvert=6.0.7=py39h6e9494a_3
+  - nbformat=5.1.3=pyhd8ed1ab_0
   - ncurses=6.2=h0a44026_1
+  - nest-asyncio=1.5.1=pyhd8ed1ab_0
   - nltk=3.5=py_0
+  - notebook=6.3.0=py39h6e9494a_0
   - numpy=1.19.2=py39h0fa1045_0
   - numpy-base=1.19.2=py39h3a452eb_0
   - olefile=0.46=py_0
-  - openssl=1.1.1k=h9ed2024_0
+  - openssl=1.1.1k=h0d85af4_0
+  - packaging=20.9=pyh44b312d_0
   - pandas=1.2.3=py39hb2f4e1b_0
+  - pandoc=2.13=h0d85af4_0
+  - pandocfilters=1.4.2=py_1
   - parso=0.7.0=py_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=8.2.0=py39h5270095_0
   - pip=21.0.1=py39hecd8cb5_0
+  - prometheus_client=0.10.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.17=pyh06a4308_0
   - protobuf=3.14.0=py39h23ab428_1
   - psycopg2=2.8.6=py39hbcfaee0_1
@@ -78,10 +103,13 @@ dependencies:
   - pygments=2.8.1=pyhd3eb1b0_0
   - pyopenssl=20.0.1=pyhd3eb1b0_1
   - pyparsing=2.4.7=pyhd3eb1b0_0
+  - pyrsistent=0.17.3=py39hcbf5805_2
   - pysocks=1.7.1=py39hecd8cb5_0
   - python=3.9.2=h88f2d9e_0
   - python-dateutil=2.8.1=pyhd3eb1b0_0
+  - python_abi=3.9=1_cp39
   - pytz=2021.1=pyhd3eb1b0_0
+  - pyzmq=20.0.0=py39h23ab428_1
   - readline=8.1=h9ed2024_0
   - regex=2021.3.17=py39h9ed2024_0
   - requests=2.25.1=pyhd3eb1b0_0
@@ -91,10 +119,13 @@ dependencies:
   - scikit-learn=0.24.1=py39hb2f4e1b_0
   - scipy=1.6.2=py39h4420a3a_0
   - seaborn=0.11.1=pyhd3eb1b0_0
+  - send2trash=1.5.0=py_0
   - setuptools=52.0.0=py39hecd8cb5_0
   - six=1.15.0=py39hecd8cb5_0
   - smart_open=5.0.0=pyhd3eb1b0_0
   - sqlite=3.35.3=hce871da_0
+  - terminado=0.9.4=py39h6e9494a_0
+  - testpath=0.4.4=py_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hb0a8c7a_0
   - tornado=6.1=py39h9ed2024_0
@@ -105,10 +136,13 @@ dependencies:
   - tzdata=2020f=h52ac0ba_0
   - urllib3=1.26.4=pyhd3eb1b0_0
   - wcwidth=0.2.5=py_0
+  - webencodings=0.5.1=py_1
   - wheel=0.36.2=pyhd3eb1b0_0
   - wrapt=1.12.1=py39h9ed2024_1
   - xz=5.2.5=h1de35cc_0
   - yarl=1.6.3=py39h9ed2024_0
+  - zeromq=4.3.4=h23ab428_0
+  - zipp=3.4.1=pyhd8ed1ab_0
   - zlib=1.2.11=h1de35cc_3
   - zstd=1.4.9=h322a384_0
   - pip:
