--- a/cfg/environment.yml
+++ b/cfg/environment.yml
@@ -12,24 +12,34 @@ dependencies:
   - async_generator=1.10=py_0
   - attrs=20.3.0=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
+  - beautifulsoup4=4.9.3=pyha847dfd_0
   - blas=1.0=openblas
   - bleach=3.3.0=pyh44b312d_0
+  - blosc=1.21.0=h2842e9f_0
   - boto3=1.17.41=pyhd3eb1b0_0
+  - brotli=1.0.9=hb1e8313_2
   - brotlipy=0.7.0=py39h9ed2024_1003
-  - ca-certificates=2020.12.5=h033912b_0
+  - brunsli=0.1=h23ab428_0
+  - bzip2=1.0.8=h1de35cc_0
+  - ca-certificates=2021.1.19=hecd8cb5_1
   - cachetools=4.2.1=pyhd3eb1b0_0
-  - certifi=2020.12.5=py39h6e9494a_1
+  - certifi=2020.12.5=py39hecd8cb5_0
   - cffi=1.14.5=py39h2125817_0
   - chardet=3.0.4=py39hecd8cb5_1003
+  - charls=2.2.0=h23ab428_0
   - click=7.1.2=pyhd3eb1b0_0
+  - cloudpickle=1.6.0=py_0
   - cryptography=3.4.7=py39h2fd3fbb_0
   - cycler=0.10.0=py39hecd8cb5_0
-  - decorator=5.0.3=pyhd3eb1b0_0
+  - cytoolz=0.11.0=py39h9ed2024_0
+  - dask-core=2021.4.0=pyhd3eb1b0_0
+  - decorator=4.4.2=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - entrypoints=0.3=pyhd8ed1ab_1003
   - freetype=2.10.4=ha233b18_0
   - fsspec=0.8.7=pyhd3eb1b0_0
   - gensim=3.8.3=py39h23ab428_2
+  - giflib=5.1.4=h1de35cc_1
   - google-api-core=1.25.1=pyhd3eb1b0_0
   - google-auth=1.28.0=pyhd3eb1b0_0
   - google-cloud-core=1.6.0=pyhd3eb1b0_0
@@ -38,6 +48,8 @@ dependencies:
   - google-resumable-media=1.2.0=pyhd3eb1b0_1
   - googleapis-common-protos=1.52.0=py39hecd8cb5_0
   - idna=2.10=pyhd3eb1b0_0
+  - imagecodecs=2021.3.31=py39h2ea9c00_0
+  - imageio=2.9.0=pyhd3eb1b0_0
   - importlib-metadata=3.10.0=py39h6e9494a_0
   - ipykernel=5.5.3=py39h71a6800_0
   - ipython=7.22.0=py39h01d92e1_0
@@ -51,11 +63,15 @@ dependencies:
   - jupyter_client=6.1.13=pyhd8ed1ab_0
   - jupyter_core=4.7.1=py39h6e9494a_0
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jxrlib=1.1=haf1e3a3_2
   - kiwisolver=1.3.1=py39h23ab428_0
   - krb5=1.17.1=hddcf347_0
-  - lcms2=2.11=h92f6f08_0
+  - lcms2=2.12=hf1fd2bf_0
+  - lerc=2.2.1=h23ab428_0
+  - libaec=1.0.4=hb1e8313_1
   - libcrc32c=1.1.1=hb1e8313_2
   - libcxx=10.0.0=1
+  - libdeflate=1.7=h9ed2024_5
   - libedit=3.1.20210216=h9ed2024_1
   - libffi=3.3=hb1e8313_2
   - libgfortran=3.0.1=h93005f0_2
@@ -65,7 +81,10 @@ dependencies:
   - libprotobuf=3.14.0=h2842e9f_0
   - libsodium=1.0.18=hbcb3906_1
   - libtiff=4.1.0=hcb84e12_1
+  - libwebp=1.0.1=hd73b212_0
+  - libzopfli=1.0.3=hb1e8313_0
   - llvm-openmp=10.0.0=h28b9765_0
+  - locket=0.2.1=py39hecd8cb5_1
   - lz4-c=1.9.3=h23ab428_0
   - markupsafe=1.1.1=py39hcbf5805_3
   - matplotlib=3.3.4=py39hecd8cb5_0
@@ -77,17 +96,20 @@ dependencies:
   - nbformat=5.1.3=pyhd8ed1ab_0
   - ncurses=6.2=h0a44026_1
   - nest-asyncio=1.5.1=pyhd8ed1ab_0
+  - networkx=2.5.1=pyhd3eb1b0_0
   - nltk=3.5=py_0
   - notebook=6.3.0=py39h6e9494a_0
   - numpy=1.19.2=py39h0fa1045_0
   - numpy-base=1.19.2=py39h3a452eb_0
   - olefile=0.46=py_0
-  - openssl=1.1.1k=h0d85af4_0
+  - openjpeg=2.3.0=hb95cd4c_1
+  - openssl=1.1.1k=h9ed2024_0
   - packaging=20.9=pyh44b312d_0
   - pandas=1.2.3=py39hb2f4e1b_0
   - pandoc=2.13=h0d85af4_0
   - pandocfilters=1.4.2=py_1
   - parso=0.7.0=py_0
+  - partd=1.1.0=py_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=8.2.0=py39h5270095_0
@@ -109,6 +131,7 @@ dependencies:
   - python-dateutil=2.8.1=pyhd3eb1b0_0
   - python_abi=3.9=1_cp39
   - pytz=2021.1=pyhd3eb1b0_0
+  - pywavelets=1.1.1=py39he3068b8_4
   - pyzmq=20.0.0=py39h23ab428_1
   - readline=8.1=h9ed2024_0
   - regex=2021.3.17=py39h9ed2024_0
@@ -116,6 +139,7 @@ dependencies:
   - rsa=4.7.2=pyhd3eb1b0_1
   - s3fs=0.5.2=pyhd3eb1b0_0
   - s3transfer=0.3.6=pyhd3eb1b0_0
+  - scikit-image=0.18.1=py39hb2f4e1b_0
   - scikit-learn=0.24.1=py39hb2f4e1b_0
   - scipy=1.6.2=py39h4420a3a_0
   - seaborn=0.11.1=pyhd3eb1b0_0
@@ -123,11 +147,15 @@ dependencies:
   - setuptools=52.0.0=py39hecd8cb5_0
   - six=1.15.0=py39hecd8cb5_0
   - smart_open=5.0.0=pyhd3eb1b0_0
+  - snappy=1.1.8=hb1e8313_0
+  - soupsieve=2.2.1=pyhd3eb1b0_0
   - sqlite=3.35.3=hce871da_0
   - terminado=0.9.4=py39h6e9494a_0
   - testpath=0.4.4=py_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
+  - tifffile=2021.3.31=pyhd3eb1b0_1
   - tk=8.6.10=hb0a8c7a_0
+  - toolz=0.11.1=pyhd3eb1b0_0
   - tornado=6.1=py39h9ed2024_0
   - tqdm=4.59.0=pyhd3eb1b0_1
   - traitlets=5.0.5=pyhd3eb1b0_0
@@ -140,11 +168,13 @@ dependencies:
   - wheel=0.36.2=pyhd3eb1b0_0
   - wrapt=1.12.1=py39h9ed2024_1
   - xz=5.2.5=h1de35cc_0
+  - yaml=0.2.5=haf1e3a3_0
   - yarl=1.6.3=py39h9ed2024_0
   - zeromq=4.3.4=h23ab428_0
+  - zfp=0.5.5=h23ab428_6
   - zipp=3.4.1=pyhd8ed1ab_0
   - zlib=1.2.11=h1de35cc_3
-  - zstd=1.4.9=h322a384_0
+  - zstd=1.4.5=h41d2c2f_0
   - pip:
     - awscli==1.19.44
     - botocore==1.20.44
