--- a/cfg/environment.yml
+++ b/cfg/environment.yml
@@ -186,19 +186,28 @@ dependencies:
   - zlib=1.2.11=h1de35cc_3
   - zstd=1.4.5=h41d2c2f_0
   - pip:
+    - afinn==0.1
+    - anyascii==0.2.0
     - awscli==1.19.44
     - botocore==1.20.44
     - colorama==0.4.3
+    - contractions==0.0.48
     - docutils==0.15.2
+    - en-core-web-lg==2.3.1
+    - en-core-web-md==2.3.1
+    - en-core-web-sm==2.3.1
     - feedparser==6.0.2
     - fuzzywuzzy==0.18.0
     - greenlet==1.0.0
     - ipython-sql==0.4.0
     - prettytable==0.7.2
+    - pyahocorasick==1.4.2
     - python-dotenv==0.17.0
     - pyyaml==5.4.1
     - sgmllib3k==1.0.0
     - sqlalchemy==1.4.5
     - sqlparse==0.4.1
+    - textblob==0.15.3
+    - textsearch==0.0.21
     - yellowbrick==1.3.post1
 prefix: /opt/anaconda3/envs/lyricsenv
