--- a/cfg/environment.yml
+++ b/cfg/environment.yml
@@ -21,10 +21,10 @@ dependencies:
   - brotlipy=0.7.0=py39h9ed2024_1003
   - brunsli=0.1=h23ab428_0
   - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2021.4.13=hecd8cb5_1
+  - ca-certificates=2020.12.5=h033912b_0
   - cachetools=4.2.1=pyhd3eb1b0_0
   - catalogue=1.0.0=pyhd3eb1b0_0
-  - certifi=2020.12.5=py39hecd8cb5_0
+  - certifi=2020.12.5=py39h6e9494a_1
   - cffi=1.14.5=py39h2125817_0
   - chardet=3.0.4=py39hecd8cb5_1003
   - charls=2.2.0=h23ab428_0
@@ -57,6 +57,7 @@ dependencies:
   - ipykernel=5.5.3=py39h71a6800_0
   - ipython=7.22.0=py39h01d92e1_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=7.6.3=pyhd3deb0d_0
   - jedi=0.17.2=py39hecd8cb5_1
   - jinja2=2.11.3=pyh44b312d_0
   - jmespath=0.10.0=py_0
@@ -66,6 +67,7 @@ dependencies:
   - jupyter_client=6.1.13=pyhd8ed1ab_0
   - jupyter_core=4.7.1=py39h6e9494a_0
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_widgets=1.0.0=pyhd8ed1ab_1
   - jxrlib=1.1=haf1e3a3_2
   - kiwisolver=1.3.1=py39h23ab428_0
   - krb5=1.17.1=hddcf347_0
@@ -107,7 +109,7 @@ dependencies:
   - numpy-base=1.19.2=py39h3a452eb_0
   - olefile=0.46=py_0
   - openjpeg=2.3.0=hb95cd4c_1
-  - openssl=1.1.1k=h9ed2024_0
+  - openssl=1.1.1k=h0d85af4_0
   - packaging=20.9=pyh44b312d_0
   - pandas=1.2.3=py39hb2f4e1b_0
   - pandoc=2.13=h0d85af4_0
@@ -176,6 +178,7 @@ dependencies:
   - wcwidth=0.2.5=py_0
   - webencodings=0.5.1=py_1
   - wheel=0.36.2=pyhd3eb1b0_0
+  - widgetsnbextension=3.5.1=py39h6e9494a_4
   - wrapt=1.12.1=py39h9ed2024_1
   - xz=5.2.5=h1de35cc_0
   - yaml=0.2.5=haf1e3a3_0
