--- a/cfg/environment.yml
+++ b/cfg/environment.yml
@@ -16,15 +16,16 @@ dependencies:
   - blas=1.0=openblas
   - bleach=3.3.0=pyh44b312d_0
   - blosc=1.21.0=h2842e9f_0
+  - bokeh=2.3.2=py39hecd8cb5_0
   - boto3=1.17.41=pyhd3eb1b0_0
   - brotli=1.0.9=hb1e8313_2
   - brotlipy=0.7.0=py39h9ed2024_1003
   - brunsli=0.1=h23ab428_0
   - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2020.12.5=h033912b_0
+  - ca-certificates=2021.5.25=hecd8cb5_1
   - cachetools=4.2.1=pyhd3eb1b0_0
   - catalogue=1.0.0=pyhd3eb1b0_0
-  - certifi=2020.12.5=py39h6e9494a_1
+  - certifi=2021.5.30=py39hecd8cb5_0
   - cffi=1.14.5=py39h2125817_0
   - chardet=3.0.4=py39hecd8cb5_1003
   - charls=2.2.0=h23ab428_0
@@ -39,6 +40,7 @@ dependencies:
   - decorator=4.4.2=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - entrypoints=0.3=pyhd8ed1ab_1003
+  - et_xmlfile=1.1.0=py39hecd8cb5_0
   - freetype=2.10.4=ha233b18_0
   - fsspec=0.8.7=pyhd3eb1b0_0
   - gensim=3.8.3=py39h23ab428_2
@@ -58,6 +60,7 @@ dependencies:
   - ipython=7.22.0=py39h01d92e1_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - ipywidgets=7.6.3=pyhd3deb0d_0
+  - jdcal=1.4.1=py_0
   - jedi=0.17.2=py39hecd8cb5_1
   - jinja2=2.11.3=pyh44b312d_0
   - jmespath=0.10.0=py_0
@@ -109,7 +112,8 @@ dependencies:
   - numpy-base=1.19.2=py39h3a452eb_0
   - olefile=0.46=py_0
   - openjpeg=2.3.0=hb95cd4c_1
-  - openssl=1.1.1k=h0d85af4_0
+  - openpyxl=3.0.7=pyhd3eb1b0_0
+  - openssl=1.1.1k=h9ed2024_0
   - packaging=20.9=pyh44b312d_0
   - pandas=1.2.3=py39hb2f4e1b_0
   - pandoc=2.13=h0d85af4_0
@@ -180,6 +184,7 @@ dependencies:
   - wheel=0.36.2=pyhd3eb1b0_0
   - widgetsnbextension=3.5.1=py39h6e9494a_4
   - wrapt=1.12.1=py39h9ed2024_1
+  - xlrd=2.0.1=pyhd3eb1b0_0
   - xz=5.2.5=h1de35cc_0
   - yaml=0.2.5=haf1e3a3_0
   - yarl=1.6.3=py39h9ed2024_0
@@ -212,5 +217,6 @@ dependencies:
     - sqlparse==0.4.1
     - textblob==0.15.3
     - textsearch==0.0.21
+    - wordcloud==1.8.1
     - yellowbrick==1.3.post1
 prefix: /opt/anaconda3/envs/lyricsenv
